@@ -1,0 +1,1 @@
+cdecl @ @ @ declare x as enum E aligned 4 @ 65
